--- a/public/assets/less/styles.less
+++ b/public/assets/less/styles.less
@@ -2,30 +2,21 @@
 
 /* Space out content a bit */
 body {
-  padding-top: 25px;
+  padding-top: 50px;
   padding-bottom: 20px;
   color: #777 !important;
   background-color: #efefef;
+  font-family: 'Roboto Condensed', sans-serif !important;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-/* Custom page header */
 .header {
   padding-bottom: 20px;
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
+  text-align: center;
+  h2 {
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 40px;
+  }
 }
 
 /* Custom page footer */
@@ -87,11 +78,30 @@ body {
   width: 100%;
   padding: 0;
   margin-bottom: 20px;
+  margin-top: 10px;
   font-size: 21px;
   line-height: 40px;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
+  float: left;
+  .form-control {
+    float: left;
+    margin-left: 15px;
+    border: 1px solid #ececec;
+    margin-top: 3px;
+    border-radius: 0;
+    width: 50px;
+    padding: 5px 12px;
+    height: 30px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
+  span {
+    font-size: 12px;
+  }
 }
 
 @import "bootstrap";
 @import "widget";
+@import "icons";
