added mining info

--- a/public/assets/less/styles.less
+++ b/public/assets/less/styles.less
@@ -73,32 +73,36 @@ body {
   }
 }
 
-.legend {
-  display: block;
+.wrapper-top {
+  display: inline-block;
   width: 100%;
-  padding: 0;
-  margin-bottom: 20px;
-  margin-top: 10px;
-  font-size: 21px;
-  line-height: 40px;
-  border: 0;
-  border-bottom: 1px solid #e5e5e5;
-  float: left;
-  .form-control {
+  .legend {
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    font-size: 21px;
+    line-height: 40px;
+    border: 0;
+    border-bottom: 1px solid #e5e5e5;
     float: left;
-    margin-left: 15px;
-    border: 1px solid #ececec;
-    margin-top: 3px;
-    border-radius: 0;
-    width: 50px;
-    padding: 5px 12px;
-    height: 30px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-  }
-  span {
-    font-size: 12px;
+    .form-control {
+      float: left;
+      margin-left: 15px;
+      border: 1px solid #ececec;
+      margin-top: 3px;
+      border-radius: 0;
+      width: 50px;
+      padding: 5px 12px;
+      height: 30px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+    }
+    span {
+      font-size: 12px;
+    }
   }
 }
 
