--- a/public/assets/less/widget.less
+++ b/public/assets/less/widget.less
@@ -5,6 +5,7 @@
   margin-bottom: 10px;
   width: 100%;
   box-shadow: 1px 1px 1px 1px #cccccc;
+  background-color: white;
   text-align: right;
   &.height-override {
     height: auto !important;
@@ -14,6 +15,12 @@
     span {
       font-size: 18px;
     }
+  }
+  .separator {
+    border-bottom: 1px solid #e5e5e5;
+    width: 100%;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
   .inner {
     p {
