--- a/public/assets/less/styles.less
+++ b/public/assets/less/styles.less
@@ -4,7 +4,7 @@
 body {
   padding-top: 50px;
   padding-bottom: 20px;
-  color: #777 !important;
+  color: black !important;
   background-color: #efefef;
   font-family: 'Roboto Condensed', sans-serif !important;
 }
