--- a/public/assets/less/styles.less
+++ b/public/assets/less/styles.less
@@ -7,6 +7,11 @@ body {
   color: black !important;
   background-color: #efefef;
   font-family: 'Roboto Condensed', sans-serif !important;
+  background-image: url('https://www.coingecko.com/assets/coin-250/vertcoin-b63026f955f22f76352c482f8369480b0390175a2a01228d5b0f205502306915.png');
+  background-repeat: no-repeat;
+  background-position-x: 50%;
+  background-position-y: 99px;
+  background-size: 82px;
 }
 
 .header {
