--- a/public/assets/less/styles.less
+++ b/public/assets/less/styles.less
@@ -24,14 +24,16 @@ body {
   }
 }
 
-/* Custom page footer */
 .footer {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
+  .dark {
+    color: #a5a5a5 !important;
+    border-top: 1px solid #a5a5a5 !important;
+  }
 }
 
-/* Customize container */
 @media (min-width: 768px) {
   .container {
     max-width: 1000px;
@@ -41,17 +43,6 @@ body {
   margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  padding: 14px 24px;
-  font-size: 21px;
-}
-
-/* Supporting marketing content */
 .marketing {
   margin: 40px 0;
 }
@@ -59,22 +50,15 @@ body {
   margin-top: 28px;
 }
 
-/* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
   .header,
   .marketing,
   .footer {
     padding-right: 0;
     padding-left: 0;
   }
-  /* Space out the masthead */
   .header {
     margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
   }
 }
 
@@ -92,6 +76,9 @@ body {
     border: 0;
     border-bottom: 1px solid #e5e5e5;
     float: left;
+    &.dark {
+      border-bottom: 1px solid #4a4a4a !important;
+    }
     .form-control {
       float: left;
       margin-left: 15px;
@@ -104,11 +91,26 @@ body {
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
+      &.dark {
+        border: 1px solid #a5a5a5 !important;
+        background-color: #101010 !important;
+        color: #a5a5a5 !important;
+      }
     }
     span {
       font-size: 12px;
     }
   }
+}
+
+.dark-g {
+  color: #A5A5A5;
+  background-color: #101010;
+}
+
+.light-g {
+  color: black;
+  background-color: white;
 }
 
 @import "bootstrap";
