--- a/public/assets/less/widget.less
+++ b/public/assets/less/widget.less
@@ -7,6 +7,10 @@
   box-shadow: 1px 1px 1px 1px #cccccc;
   background-color: white;
   text-align: right;
+  &.dark {
+    box-shadow: 1px 1px 1px 1px #232323 !important;
+    background-color: #222 !important;
+  }
   &.height-override {
     height: auto !important;
   }
@@ -45,8 +49,42 @@
 .down {
   color: red;
   font-size: 14px !important;
+  &.dark {
+    color: #983729 !important;
+  }
 }
 .up {
   color: #69a269;
   font-size: 14px !important;
+}
+
+.timer {
+  text-align: center;
+  height: 50px;
+  margin-bottom: 15px;
+  h4 {
+    margin-top: 0;
+    font-size: 20px;
+  }
+  .wrapper {
+    width: 100%;
+    height: 100%;
+    .time-holder {
+      height: 100%;
+      display: table-cell;
+      width: 22%;
+      float: left;
+      vertical-align: middle;
+      padding: 9px;
+      margin: 5px;
+      font-size: 21px;
+      box-shadow: 1px 1px 5px 1px #ccc;
+    }
+  }
+}
+
+.est-time {
+  position: absolute;
+  right: 55px;
+  bottom: -20px;
 }
