--- a/public/assets/less/widget.less
+++ b/public/assets/less/widget.less
@@ -4,7 +4,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
   width: 100%;
-  box-shadow: 1px 1px 1px 1px #cccccc;
+  box-shadow: 1px 1px 3px 1px #cccccc;
   background-color: white;
   text-align: right;
   &.dark {
@@ -58,33 +58,58 @@
   font-size: 14px !important;
 }
 
-.timer {
-  text-align: center;
-  height: 50px;
-  margin-bottom: 15px;
-  h4 {
-    margin-top: 0;
-    font-size: 20px;
+.timer-container {
+  height: 115px;
+  margin-bottom: 9px;
+  @media screen and (max-width: 320px) {
+    margin-bottom: 0;
   }
-  .wrapper {
-    width: 100%;
-    height: 100%;
-    .time-holder {
+  .timer {
+    text-align: center;
+    height: 50px;
+    margin-bottom: 15px;
+    @media screen and (max-width: 320px) {
+      height: 42px;
+    }
+    h4 {
+      margin-top: 0;
+      font-size: 20px;
+    }
+    .wrapper {
+      width: 100%;
       height: 100%;
-      display: table-cell;
-      width: 22%;
-      float: left;
-      vertical-align: middle;
-      padding: 9px;
-      margin: 5px;
-      font-size: 21px;
-      box-shadow: 1px 1px 5px 1px #ccc;
+      .time-holder {
+        height: 100%;
+        display: table-cell;
+        width: 22%;
+        float: left;
+        vertical-align: middle;
+        padding: 9px;
+        margin: 5px;
+        font-size: 19px;
+        box-shadow: 1px 1px 5px 1px #ccc;
+        @media screen and (max-width: 363px) {
+          width: 21%;
+        }
+        .time-post {
+          font-size: 15px;
+          @media screen and (max-width: 363px) {
+            font-size: 12px;
+          }
+        }
+      }
     }
   }
 }
 
 .est-time {
   position: absolute;
-  right: 55px;
+  right: 36px;
   bottom: -20px;
+  font-size: 12px;
+  @media screen and (max-width: 992px) {
+    bottom: -62px;
+    font-size: 12px;
+    right: 21px;
+  }
 }
