--- a/widget.less
+++ b/widget.less
@@ -4,7 +4,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
   width: 100%;
-  box-shadow: 1px 1px 5px 0px #d5d5d5;
+  box-shadow: 1px 1px 3px 1px #cccccc;
   background-color: white;
   text-align: right;
   &.dark {
